--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -3,8 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
     <EditTextPreference
         android:title="@string/pref_location_label"
         android:key="@string/pref_location_key"
@@ -12,25 +10,14 @@
         android:inputType="text"
         android:singleLine="true" />
 
+    <ListPreference
+        android:title="@string/pref_units_label"
+        android:key="@string/pref_units_key"
+        android:defaultValue="1"
+        android:entries="@array/pref_units_list_titles"
+        android:entryValues="@array/pref_units_list_values" />
+
 </PreferenceScreen>
 
 
-    <!--<CheckBoxPreference-->
-        <!--android:key="example_checkbox"-->
-        <!--android:title="@string/pref_title_social_recommendations"-->
-        <!--android:summary="@string/pref_description_social_recommendations"-->
-        <!--android:defaultValue="true" />-->
-
-
-    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
-         <!--dismiss it. &ndash;&gt;-->
-    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
-    <!--<ListPreference-->
-        <!--android:key="example_list"-->
-        <!--android:title="@string/pref_title_add_friends_to_messages"-->
-        <!--android:defaultValue="-1"-->
-        <!--android:entries="@array/pref_example_list_titles"-->
-        <!--android:entryValues="@array/pref_example_list_values"-->
-        <!--android:negativeButtonText="@null"-->
-        <!--android:positiveButtonText="@null" />-->
 
