--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -2,16 +2,16 @@
 
     <!-- These settings headers are only used on tablets. -->
 
-    <header
-        android:fragment="com.example.android.sunshine.app.SettingsActivity$GeneralPreferenceFragment"
-        android:title="@string/pref_header_general" />
+    <!--<header-->
+        <!--android:fragment="com.example.android.sunshine.app.SettingsActivity$GeneralPreferenceFragment"-->
+        <!--android:title="@string/pref_header_general" />-->
 
-    <header
-        android:fragment="com.example.android.sunshine.app.SettingsActivity$NotificationPreferenceFragment"
-        android:title="@string/pref_header_notifications" />
+    <!--<header-->
+        <!--android:fragment="com.example.android.sunshine.app.SettingsActivity$NotificationPreferenceFragment"-->
+        <!--android:title="@string/pref_header_notifications" />-->
 
-    <header
-        android:fragment="com.example.android.sunshine.app.SettingsActivity$DataSyncPreferenceFragment"
-        android:title="@string/pref_header_data_sync" />
+    <!--<header-->
+        <!--android:fragment="com.example.android.sunshine.app.SettingsActivity$DataSyncPreferenceFragment"-->
+        <!--android:title="@string/pref_header_data_sync" />-->
 
 </preference-headers>
