--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/detail_Text"
-        android:text="@string/hello_world"
+        android:text="Hello World!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
