--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -13,9 +13,9 @@
     <ListPreference
         android:title="@string/pref_units_label"
         android:key="@string/pref_units_key"
-        android:defaultValue="1"
-        android:entries="@array/pref_units_list_titles"
-        android:entryValues="@array/pref_units_list_values" />
+        android:defaultValue="@string/pref_units_metric"
+        android:entryValues="@array/pref_units_values"
+        android:entries="@array/pref_units_options" />
 
 </PreferenceScreen>
 
